--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- PWA Manifest -->
+<link rel="manifest" href="manifest.json">
+
+<!-- iOS Add to Home Screen -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Ashconsoles">
+
+<!-- iOS Icons -->
+<link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
+
+<!-- Theme -->
+<meta name="theme-color" content="#0f172a">
+
   <meta charset="UTF-8">
   <title>Ashconsoles</title>
   <style>
@@ -21,7 +35,7 @@
 </head>
 <body>
 
-<h2>GitHub Pages Sites</h2>
+<h2>All Pages</h2>
 <ul id="pagesList">Loading…</ul>
 
 <script>
@@ -99,6 +113,12 @@ async function loadPages() {
 }
 
 loadPages();
+</script>
+
+  <script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("sw.js");
+}
 </script>
 
 
