--- a/index.html
+++ b/index.html
@@ -64,17 +64,22 @@ body {
 const username = "ashconsoles";
 const list = document.getElementById("pagesList");
 
-/* 🧹 CLEAR SERVICE WORKER CACHE (optional but safe) */
-if ('caches' in window) {
-  caches.keys().then(names => {
-    names.forEach(name => caches.delete(name));
-  });
-}
+
 
 /* 📄 FETCH PAGE TITLE */
 const fallbackIcon =
   "data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='20' fill='%23020417'/><text x='50%' y='55%' font-size='42' fill='%23fff' text-anchor='middle'>🌐</text></svg>";
 
+
+function imageExists(url) {
+  return new Promise(resolve => {
+    const img = new Image();
+    img.onload = () => resolve(true);
+    img.onerror = () => resolve(false);
+    img.src = url + "?ts=" + Date.now();
+  });
+}
+  
 async function getBestIcon(repo) {
   const base = `https://${username}.github.io/${repo}`;
 
@@ -86,11 +91,8 @@ async function getBestIcon(repo) {
     `${base}/apple-touch-icon.png`
   ];
 
-  for (const url of icons) {
-    try {
-      const res = await fetch(url, { method: "HEAD", cache: "no-store" });
-      if (res.ok) return url;
-    } catch {}
+ for (const url of icons) {
+    if (await imageExists(url)) return url;
   }
 
   return fallbackIcon;
@@ -167,7 +169,8 @@ async function loadPages() {
   }
 }
 
-loadPages();
+document.addEventListener("DOMContentLoaded", loadPages);
+
 </script>
 
 
