--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
 <link rel="manifest" href="manifest.json">
 
 <!-- iOS Add to Home Screen -->
+  <!-- iOS PWA settings -->
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="Ashconsoles">
+<meta name="apple-mobile-web-app-title" content="Ash Consoles">
+  <!-- iOS Home Screen Icon -->
+<link rel="apple-touch-icon" href="./apple-touch-icon.png">
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="152x152" href="./apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="120x120" href="./apple-touch-icon.png">
 
-<!-- iOS Icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/icon-180.png">
 
 <!-- Theme -->
 <meta name="theme-color" content="#0f172a">
